--- a/components/eg6i3ro1u-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/eg6i3ro1u-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: eg6i3ro1u-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-01737a6639.7nyo.p3.openshiftapps.com/rhtap/rhtap-qe:94c3cc6d308b7e4fc95ff23383e2a327a8cc8036@sha256:16f9fd5832b7a3d1ccea6cdf5b10edd043f4bf9ed47ac78b805b9ad0eecb88c6
+          name: container-image
